# RSSReader

./: .gitignore  AGENTS.md  INIT.md  LICENSE  PLAN.md  README.md
RSSReader/: README.md  package-lock.json  package.json
RSSReader/backend/: Cargo.toml
RSSReader/backend/src/: lib.rs  reader.rs
RSSReader/backend/src/ai/: commands.rs  error.rs  http.rs  mod.rs  model.rs  secrets.rs  service.rs  text.rs
RSSReader/backend/src/ai/client/: mod.rs  openai_compat.rs
RSSReader/backend/src/ai/prompt/: customization.rs  messages.rs  mod.rs  parameters.rs  resolver.rs  template_store.rs
RSSReader/backend/src/ai/provider/: mod.rs  repository.rs  service.rs
RSSReader/backend/src/ai/runtime/: mod.rs  route.rs  task_queue.rs
RSSReader/backend/src/ai/summary/: mod.rs  service.rs
RSSReader/backend/src/ai/tagging/: mod.rs  normalize.rs  service.rs
RSSReader/backend/src/ai/translation/: mod.rs  segmentation.rs  service.rs
RSSReader/backend/src/ai/usage/: mod.rs  service.rs
RSSReader/backend/src/articles/: mod.rs
RSSReader/backend/src/database/: mod.rs
RSSReader/backend/src/feeds/: commands.rs  mod.rs  model.rs  parser.rs  repository.rs  service.rs
RSSReader/backend/src/feeds/repository/: articles.rs  feeds.rs  notes.rs  tags.rs
RSSReader/db/: README.md
RSSReader/docs/: agent-log-2026-05-22-full.md  ai-compatibility.md  ai-issues.md  ai-progress.md  mercury-ai-spec-index.md  (+2 more)
RSSReader/src-tauri/: Cargo.toml  tauri.conf.json
RSSReader/src-tauri/capabilities/: default.json
RSSReader/src-tauri/icons/: icon.icns
RSSReader/src-tauri/src/: main.rs  opml.rs
(+199 files in other folders)
