[package]
name = "rssreader-backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rssreader-backend-dev"
path = "src/bin/dev_server.rs"

[dependencies]
ammonia = "4"
feed-rs = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
