[package]
name = "rssreader-desktop"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
quick-xml = "0.39"
rfd = "0.15"
rssreader-backend = { path = "../backend" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
